chore: use unmodifiable and empty lists for safer handling.
Replaced mutable `ArrayList` and `List.of()` with `Collections.unmodifiableList` and `Collections.emptyList` to enforce immutability and ensure safer handling of list structures in `PathfinderConfiguration`. This enhances consistency and avoids unintended modifications.